fix double scroll overlay

--- a/app/react/controllers/App/scss/elements/_base.scss
+++ b/app/react/controllers/App/scss/elements/_base.scss
@@ -3,6 +3,7 @@ body {
 	color: $c-black;
 	font-family: $f-regular;
 	font-size: $f-size;
+	overflow: hidden;
 }
 
 label {
